--- a/nbs/03-gpt.ipynb
+++ b/nbs/03-gpt.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7a89b24",
+   "metadata": {},
+   "source": [
+    "# GPT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "791ea609",
