feat: added DeviceCB in training

--- a/nbs/00-data.ipynb
+++ b/nbs/00-data.ipynb
@@ -129,7 +129,7 @@
     "    if isinstance(x, Mapping): \n",
     "        return {key: value.to(device) for key, value in x.items()}\n",
     "        \n",
-    "    return type(x)(to_device(item) for item in x)\n",
+    "    return type(x)(to_device(item, device=device) for item in x)\n",
     "\n",
     "def to_cpu(x: Tensor) -> Tensor:\n",
     "    if isinstance(x, Mapping):\n",
